etapa3/y.output
Terminals unused in grammar

    TOKEN_ERROR


State 97 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: declaration_list

    2 declaration_list: declaration declaration_list
    3                 | %empty

    4 declaration: declaration_function
    5            | declaration_global

    6 declaration_global: declaration_global_int
    7                   | declaration_global_char
    8                   | declaration_global_float

    9 declaration_global_int: KW_INT TK_IDENTIFIER ':' expression ';'
   10                       | KW_INT TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   11                       | KW_INT TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val ';'

   12 declaration_global_char: KW_CHAR TK_IDENTIFIER ':' expression ';'
   13                        | KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   14                        | KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val ';'

   15 declaration_global_float: KW_FLOAT TK_IDENTIFIER ':' LIT_INTEGER '/' LIT_INTEGER ';'
   16                         | KW_FLOAT TK_IDENTIFIER '[' LIT_INTEGER ']' ';'

   17 array_val: LIT_INTEGER array_val
   18          | LIT_INTEGER
   19          | LIT_CHAR array_val
   20          | LIT_CHAR

   21 declaration_function: KW_INT TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body
   22                     | KW_CHAR TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body
   23                     | KW_FLOAT TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body

   24 declaration_function_args_or_empty: declaration_function_args
   25                                   | %empty

   26 declaration_function_args: KW_INT TK_IDENTIFIER ',' declaration_function_args
   27                          | KW_CHAR TK_IDENTIFIER ',' declaration_function_args
   28                          | KW_FLOAT TK_IDENTIFIER ',' declaration_function_args
   29                          | KW_INT TK_IDENTIFIER
   30                          | KW_CHAR TK_IDENTIFIER
   31                          | KW_FLOAT TK_IDENTIFIER

   32 declaration_function_body: command

   33 function_call: TK_IDENTIFIER '(' function_args_or_empty ')'

   34 function_args_or_empty: function_args
   35                       | %empty

   36 function_args: expression
   37              | expression ',' function_args

   38 command: attribution
   39        | flux_control
   40        | print
   41        | return
   42        | command_block
   43        | %empty

   44 command_block: '{' command_list '}'

   45 command_list: command ';' command_list
   46             | label command_list
   47             | ';' command_list
   48             | %empty

   49 attribution: TK_IDENTIFIER '=' expression
   50            | array_element '=' expression

   51 expression: LIT_INTEGER
   52           | LIT_CHAR
   53           | TK_IDENTIFIER
   54           | KW_READ
   55           | array_element
   56           | expression '+' expression
   57           | expression '-' expression
   58           | expression '*' expression
   59           | expression '/' expression
   60           | expression '<' expression
   61           | expression '>' expression
   62           | expression OPERATOR_LE expression
   63           | expression OPERATOR_GE expression
   64           | expression OPERATOR_EQ expression
   65           | expression OPERATOR_DIF expression
   66           | '(' expression ')'
   67           | function_call

   68 array_element: TK_IDENTIFIER '[' expression ']'

   69 print: KW_PRINT print_rest

   70 print_rest: LIT_STRING
   71           | LIT_STRING ',' print_rest
   72           | expression
   73           | expression ',' print_rest

   74 return: KW_RETURN expression

   75 flux_control: KW_IF expression KW_THEN command
   76             | KW_IF expression KW_THEN command KW_ELSE command
   77             | KW_WHILE expression command
   78             | go_to

   79 label: TK_IDENTIFIER ':'

   80 go_to: KW_GOTO TK_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 21 22 23 33 66
    ')' (41) 21 22 23 33 66
    '*' (42) 58
    '+' (43) 56
    ',' (44) 26 27 28 37 71 73
    '-' (45) 57
    '/' (47) 15 59
    ':' (58) 9 11 12 14 15 79
    ';' (59) 9 10 11 12 13 14 15 16 45 47
    '<' (60) 60
    '=' (61) 49 50
    '>' (62) 61
    '[' (91) 10 11 13 14 16 68
    ']' (93) 10 11 13 14 16 68
    '{' (123) 44
    '}' (125) 44
    error (256)
    KW_CHAR (258) 12 13 14 22 27 30
    KW_INT (259) 9 10 11 21 26 29
    KW_FLOAT (260) 15 16 23 28 31
    KW_IF (261) 75 76
    KW_THEN (262) 75 76
    KW_ELSE (263) 76
    KW_WHILE (264) 77
    KW_GOTO (265) 80
    KW_READ (266) 54
    KW_PRINT (267) 69
    KW_RETURN (268) 74
    OPERATOR_LE (269) 62
    OPERATOR_GE (270) 63
    OPERATOR_EQ (271) 64
    OPERATOR_DIF (272) 65
    TK_IDENTIFIER (273) 9 10 11 12 13 14 15 16 21 22 23 26 27 28 29 30 31 33 49 53 68 79 80
    LIT_INTEGER (274) 10 11 13 14 15 16 17 18 51
    LIT_CHAR (275) 19 20 52
    LIT_STRING (276) 70 71
    TOKEN_ERROR (277)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    programa (40)
        on left: 1
        on right: 0
    declaration_list (41)
        on left: 2 3
        on right: 1 2
    declaration (42)
        on left: 4 5
        on right: 2
    declaration_global (43)
        on left: 6 7 8
        on right: 5
    declaration_global_int (44)
        on left: 9 10 11
        on right: 6
    declaration_global_char (45)
        on left: 12 13 14
        on right: 7
    declaration_global_float (46)
        on left: 15 16
        on right: 8
    array_val (47)
        on left: 17 18 19 20
        on right: 11 14 17 19
    declaration_function (48)
        on left: 21 22 23
        on right: 4
    declaration_function_args_or_empty (49)
        on left: 24 25
        on right: 21 22 23
    declaration_function_args (50)
        on left: 26 27 28 29 30 31
        on right: 24 26 27 28
    declaration_function_body (51)
        on left: 32
        on right: 21 22 23
    function_call (52)
        on left: 33
        on right: 67
    function_args_or_empty (53)
        on left: 34 35
        on right: 33
    function_args (54)
        on left: 36 37
        on right: 34 37
    command (55)
        on left: 38 39 40 41 42 43
        on right: 32 45 75 76 77
    command_block (56)
        on left: 44
        on right: 42
    command_list (57)
        on left: 45 46 47 48
        on right: 44 45 46 47
    attribution (58)
        on left: 49 50
        on right: 38
    expression (59)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 9 12 36 37 49 50 56 57 58 59 60 61 62 63 64 65 66 68 72 73 74 75 76 77
    array_element (60)
        on left: 68
        on right: 50 55
    print (61)
        on left: 69
        on right: 40
    print_rest (62)
        on left: 70 71 72 73
        on right: 69 71 73
    return (63)
        on left: 74
        on right: 41
    flux_control (64)
        on left: 75 76 77 78
        on right: 39
    label (65)
        on left: 79
        on right: 46
    go_to (66)
        on left: 80
        on right: 78


State 0

    0 $accept: . programa $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (declaration_list)

    programa                  go to state 4
    declaration_list          go to state 5
    declaration               go to state 6
    declaration_global        go to state 7
    declaration_global_int    go to state 8
    declaration_global_char   go to state 9
    declaration_global_float  go to state 10
    declaration_function      go to state 11


State 1

   12 declaration_global_char: KW_CHAR . TK_IDENTIFIER ':' expression ';'
   13                        | KW_CHAR . TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   14                        | KW_CHAR . TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val ';'
   22 declaration_function: KW_CHAR . TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body

    TK_IDENTIFIER  shift, and go to state 12


State 2

    9 declaration_global_int: KW_INT . TK_IDENTIFIER ':' expression ';'
   10                       | KW_INT . TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   11                       | KW_INT . TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val ';'
   21 declaration_function: KW_INT . TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body

    TK_IDENTIFIER  shift, and go to state 13


State 3

   15 declaration_global_float: KW_FLOAT . TK_IDENTIFIER ':' LIT_INTEGER '/' LIT_INTEGER ';'
   16                         | KW_FLOAT . TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   23 declaration_function: KW_FLOAT . TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body

    TK_IDENTIFIER  shift, and go to state 14


State 4

    0 $accept: programa . $end

    $end  shift, and go to state 15


State 5

    1 programa: declaration_list .

    $default  reduce using rule 1 (programa)


State 6

    2 declaration_list: declaration . declaration_list

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (declaration_list)

    declaration_list          go to state 16
    declaration               go to state 6
    declaration_global        go to state 7
    declaration_global_int    go to state 8
    declaration_global_char   go to state 9
    declaration_global_float  go to state 10
    declaration_function      go to state 11


State 7

    5 declaration: declaration_global .

    $default  reduce using rule 5 (declaration)


State 8

    6 declaration_global: declaration_global_int .

    $default  reduce using rule 6 (declaration_global)


State 9

    7 declaration_global: declaration_global_char .

    $default  reduce using rule 7 (declaration_global)


State 10

    8 declaration_global: declaration_global_float .

    $default  reduce using rule 8 (declaration_global)


State 11

    4 declaration: declaration_function .

    $default  reduce using rule 4 (declaration)


State 12

   12 declaration_global_char: KW_CHAR TK_IDENTIFIER . ':' expression ';'
   13                        | KW_CHAR TK_IDENTIFIER . '[' LIT_INTEGER ']' ';'
   14                        | KW_CHAR TK_IDENTIFIER . '[' LIT_INTEGER ']' ':' array_val ';'
   22 declaration_function: KW_CHAR TK_IDENTIFIER . '(' declaration_function_args_or_empty ')' declaration_function_body

    ':'  shift, and go to state 17
    '['  shift, and go to state 18
    '('  shift, and go to state 19


State 13

    9 declaration_global_int: KW_INT TK_IDENTIFIER . ':' expression ';'
   10                       | KW_INT TK_IDENTIFIER . '[' LIT_INTEGER ']' ';'
   11                       | KW_INT TK_IDENTIFIER . '[' LIT_INTEGER ']' ':' array_val ';'
   21 declaration_function: KW_INT TK_IDENTIFIER . '(' declaration_function_args_or_empty ')' declaration_function_body

    ':'  shift, and go to state 20
    '['  shift, and go to state 21
    '('  shift, and go to state 22


State 14

   15 declaration_global_float: KW_FLOAT TK_IDENTIFIER . ':' LIT_INTEGER '/' LIT_INTEGER ';'
   16                         | KW_FLOAT TK_IDENTIFIER . '[' LIT_INTEGER ']' ';'
   23 declaration_function: KW_FLOAT TK_IDENTIFIER . '(' declaration_function_args_or_empty ')' declaration_function_body

    ':'  shift, and go to state 23
    '['  shift, and go to state 24
    '('  shift, and go to state 25


State 15

    0 $accept: programa $end .

    $default  accept


State 16

    2 declaration_list: declaration declaration_list .

    $default  reduce using rule 2 (declaration_list)


State 17

   12 declaration_global_char: KW_CHAR TK_IDENTIFIER ':' . expression ';'

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 32
    array_element  go to state 33


State 18

   13 declaration_global_char: KW_CHAR TK_IDENTIFIER '[' . LIT_INTEGER ']' ';'
   14                        | KW_CHAR TK_IDENTIFIER '[' . LIT_INTEGER ']' ':' array_val ';'

    LIT_INTEGER  shift, and go to state 34


State 19

   22 declaration_function: KW_CHAR TK_IDENTIFIER '(' . declaration_function_args_or_empty ')' declaration_function_body

    KW_CHAR   shift, and go to state 35
    KW_INT    shift, and go to state 36
    KW_FLOAT  shift, and go to state 37

    $default  reduce using rule 25 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 38
    declaration_function_args           go to state 39


State 20

    9 declaration_global_int: KW_INT TK_IDENTIFIER ':' . expression ';'

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 40
    array_element  go to state 33


State 21

   10 declaration_global_int: KW_INT TK_IDENTIFIER '[' . LIT_INTEGER ']' ';'
   11                       | KW_INT TK_IDENTIFIER '[' . LIT_INTEGER ']' ':' array_val ';'

    LIT_INTEGER  shift, and go to state 41


State 22

   21 declaration_function: KW_INT TK_IDENTIFIER '(' . declaration_function_args_or_empty ')' declaration_function_body

    KW_CHAR   shift, and go to state 35
    KW_INT    shift, and go to state 36
    KW_FLOAT  shift, and go to state 37

    $default  reduce using rule 25 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 42
    declaration_function_args           go to state 39


State 23

   15 declaration_global_float: KW_FLOAT TK_IDENTIFIER ':' . LIT_INTEGER '/' LIT_INTEGER ';'

    LIT_INTEGER  shift, and go to state 43


State 24

   16 declaration_global_float: KW_FLOAT TK_IDENTIFIER '[' . LIT_INTEGER ']' ';'

    LIT_INTEGER  shift, and go to state 44


State 25

   23 declaration_function: KW_FLOAT TK_IDENTIFIER '(' . declaration_function_args_or_empty ')' declaration_function_body

    KW_CHAR   shift, and go to state 35
    KW_INT    shift, and go to state 36
    KW_FLOAT  shift, and go to state 37

    $default  reduce using rule 25 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 45
    declaration_function_args           go to state 39


State 26

   54 expression: KW_READ .

    $default  reduce using rule 54 (expression)


State 27

   33 function_call: TK_IDENTIFIER . '(' function_args_or_empty ')'
   53 expression: TK_IDENTIFIER .
   68 array_element: TK_IDENTIFIER . '[' expression ']'

    '['  shift, and go to state 46
    '('  shift, and go to state 47

    $default  reduce using rule 53 (expression)


State 28

   51 expression: LIT_INTEGER .

    $default  reduce using rule 51 (expression)


State 29

   52 expression: LIT_CHAR .

    $default  reduce using rule 52 (expression)


State 30

   66 expression: '(' . expression ')'

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 48
    array_element  go to state 33


State 31

   67 expression: function_call .

    $default  reduce using rule 67 (expression)


State 32

   12 declaration_global_char: KW_CHAR TK_IDENTIFIER ':' expression . ';'
   56 expression: expression . '+' expression
   57           | expression . '-' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '<' expression
   61           | expression . '>' expression
   62           | expression . OPERATOR_LE expression
   63           | expression . OPERATOR_GE expression
   64           | expression . OPERATOR_EQ expression
   65           | expression . OPERATOR_DIF expression

    OPERATOR_LE   shift, and go to state 49
    OPERATOR_GE   shift, and go to state 50
    OPERATOR_EQ   shift, and go to state 51
    OPERATOR_DIF  shift, and go to state 52
    '<'           shift, and go to state 53
    '>'           shift, and go to state 54
    '+'           shift, and go to state 55
    '-'           shift, and go to state 56
    '*'           shift, and go to state 57
    '/'           shift, and go to state 58
    ';'           shift, and go to state 59


State 33

   55 expression: array_element .

    $default  reduce using rule 55 (expression)


State 34

   13 declaration_global_char: KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER . ']' ';'
   14                        | KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER . ']' ':' array_val ';'

    ']'  shift, and go to state 60


State 35

   27 declaration_function_args: KW_CHAR . TK_IDENTIFIER ',' declaration_function_args
   30                          | KW_CHAR . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 61


State 36

   26 declaration_function_args: KW_INT . TK_IDENTIFIER ',' declaration_function_args
   29                          | KW_INT . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 62


State 37

   28 declaration_function_args: KW_FLOAT . TK_IDENTIFIER ',' declaration_function_args
   31                          | KW_FLOAT . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 63


State 38

   22 declaration_function: KW_CHAR TK_IDENTIFIER '(' declaration_function_args_or_empty . ')' declaration_function_body

    ')'  shift, and go to state 64


State 39

   24 declaration_function_args_or_empty: declaration_function_args .

    $default  reduce using rule 24 (declaration_function_args_or_empty)


State 40

    9 declaration_global_int: KW_INT TK_IDENTIFIER ':' expression . ';'
   56 expression: expression . '+' expression
   57           | expression . '-' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '<' expression
   61           | expression . '>' expression
   62           | expression . OPERATOR_LE expression
   63           | expression . OPERATOR_GE expression
   64           | expression . OPERATOR_EQ expression
   65           | expression . OPERATOR_DIF expression

    OPERATOR_LE   shift, and go to state 49
    OPERATOR_GE   shift, and go to state 50
    OPERATOR_EQ   shift, and go to state 51
    OPERATOR_DIF  shift, and go to state 52
    '<'           shift, and go to state 53
    '>'           shift, and go to state 54
    '+'           shift, and go to state 55
    '-'           shift, and go to state 56
    '*'           shift, and go to state 57
    '/'           shift, and go to state 58
    ';'           shift, and go to state 65


State 41

   10 declaration_global_int: KW_INT TK_IDENTIFIER '[' LIT_INTEGER . ']' ';'
   11                       | KW_INT TK_IDENTIFIER '[' LIT_INTEGER . ']' ':' array_val ';'

    ']'  shift, and go to state 66


State 42

   21 declaration_function: KW_INT TK_IDENTIFIER '(' declaration_function_args_or_empty . ')' declaration_function_body

    ')'  shift, and go to state 67


State 43

   15 declaration_global_float: KW_FLOAT TK_IDENTIFIER ':' LIT_INTEGER . '/' LIT_INTEGER ';'

    '/'  shift, and go to state 68


State 44

   16 declaration_global_float: KW_FLOAT TK_IDENTIFIER '[' LIT_INTEGER . ']' ';'

    ']'  shift, and go to state 69


State 45

   23 declaration_function: KW_FLOAT TK_IDENTIFIER '(' declaration_function_args_or_empty . ')' declaration_function_body

    ')'  shift, and go to state 70


State 46

   68 array_element: TK_IDENTIFIER '[' . expression ']'

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 71
    array_element  go to state 33


State 47

   33 function_call: TK_IDENTIFIER '(' . function_args_or_empty ')'

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    $default  reduce using rule 35 (function_args_or_empty)

    function_call           go to state 31
    function_args_or_empty  go to state 72
    function_args           go to state 73
    expression              go to state 74
    array_element           go to state 33


State 48

   56 expression: expression . '+' expression
   57           | expression . '-' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '<' expression
   61           | expression . '>' expression
   62           | expression . OPERATOR_LE expression
   63           | expression . OPERATOR_GE expression
   64           | expression . OPERATOR_EQ expression
   65           | expression . OPERATOR_DIF expression
   66           | '(' expression . ')'

    OPERATOR_LE   shift, and go to state 49
    OPERATOR_GE   shift, and go to state 50
    OPERATOR_EQ   shift, and go to state 51
    OPERATOR_DIF  shift, and go to state 52
    '<'           shift, and go to state 53
    '>'           shift, and go to state 54
    '+'           shift, and go to state 55
    '-'           shift, and go to state 56
    '*'           shift, and go to state 57
    '/'           shift, and go to state 58
    ')'           shift, and go to state 75


State 49

   62 expression: expression OPERATOR_LE . expression

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 76
    array_element  go to state 33


State 50

   63 expression: expression OPERATOR_GE . expression

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 77
    array_element  go to state 33


State 51

   64 expression: expression OPERATOR_EQ . expression

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 78
    array_element  go to state 33


State 52

   65 expression: expression OPERATOR_DIF . expression

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 79
    array_element  go to state 33


State 53

   60 expression: expression '<' . expression

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 80
    array_element  go to state 33


State 54

   61 expression: expression '>' . expression

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 81
    array_element  go to state 33


State 55

   56 expression: expression '+' . expression

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 82
    array_element  go to state 33


State 56

   57 expression: expression '-' . expression

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 83
    array_element  go to state 33


State 57

   58 expression: expression '*' . expression

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 84
    array_element  go to state 33


State 58

   59 expression: expression '/' . expression

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 85
    array_element  go to state 33


State 59

   12 declaration_global_char: KW_CHAR TK_IDENTIFIER ':' expression ';' .

    $default  reduce using rule 12 (declaration_global_char)


State 60

   13 declaration_global_char: KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER ']' . ';'
   14                        | KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER ']' . ':' array_val ';'

    ':'  shift, and go to state 86
    ';'  shift, and go to state 87


State 61

   27 declaration_function_args: KW_CHAR TK_IDENTIFIER . ',' declaration_function_args
   30                          | KW_CHAR TK_IDENTIFIER .

    ','  shift, and go to state 88

    $default  reduce using rule 30 (declaration_function_args)


State 62

   26 declaration_function_args: KW_INT TK_IDENTIFIER . ',' declaration_function_args
   29                          | KW_INT TK_IDENTIFIER .

    ','  shift, and go to state 89

    $default  reduce using rule 29 (declaration_function_args)


State 63

   28 declaration_function_args: KW_FLOAT TK_IDENTIFIER . ',' declaration_function_args
   31                          | KW_FLOAT TK_IDENTIFIER .

    ','  shift, and go to state 90

    $default  reduce using rule 31 (declaration_function_args)


State 64

   22 declaration_function: KW_CHAR TK_IDENTIFIER '(' declaration_function_args_or_empty ')' . declaration_function_body

    KW_IF          shift, and go to state 91
    KW_WHILE       shift, and go to state 92
    KW_GOTO        shift, and go to state 93
    KW_PRINT       shift, and go to state 94
    KW_RETURN      shift, and go to state 95
    TK_IDENTIFIER  shift, and go to state 96
    '{'            shift, and go to state 97

    $default  reduce using rule 43 (command)

    declaration_function_body  go to state 98
    command                    go to state 99
    command_block              go to state 100
    attribution                go to state 101
    array_element              go to state 102
    print                      go to state 103
    return                     go to state 104
    flux_control               go to state 105
    go_to                      go to state 106


State 65

    9 declaration_global_int: KW_INT TK_IDENTIFIER ':' expression ';' .

    $default  reduce using rule 9 (declaration_global_int)


State 66

   10 declaration_global_int: KW_INT TK_IDENTIFIER '[' LIT_INTEGER ']' . ';'
   11                       | KW_INT TK_IDENTIFIER '[' LIT_INTEGER ']' . ':' array_val ';'

    ':'  shift, and go to state 107
    ';'  shift, and go to state 108


State 67

   21 declaration_function: KW_INT TK_IDENTIFIER '(' declaration_function_args_or_empty ')' . declaration_function_body

    KW_IF          shift, and go to state 91
    KW_WHILE       shift, and go to state 92
    KW_GOTO        shift, and go to state 93
    KW_PRINT       shift, and go to state 94
    KW_RETURN      shift, and go to state 95
    TK_IDENTIFIER  shift, and go to state 96
    '{'            shift, and go to state 97

    $default  reduce using rule 43 (command)

    declaration_function_body  go to state 109
    command                    go to state 99
    command_block              go to state 100
    attribution                go to state 101
    array_element              go to state 102
    print                      go to state 103
    return                     go to state 104
    flux_control               go to state 105
    go_to                      go to state 106


State 68

   15 declaration_global_float: KW_FLOAT TK_IDENTIFIER ':' LIT_INTEGER '/' . LIT_INTEGER ';'

    LIT_INTEGER  shift, and go to state 110


State 69

   16 declaration_global_float: KW_FLOAT TK_IDENTIFIER '[' LIT_INTEGER ']' . ';'

    ';'  shift, and go to state 111


State 70

   23 declaration_function: KW_FLOAT TK_IDENTIFIER '(' declaration_function_args_or_empty ')' . declaration_function_body
